tests/fixtures/invalid/float_slice.py
# Float does not support slice operation
x: float = 1.5
y: float = x[0:1]
